# Secure-Kernel-Sandbox-Environment

./: BUILD.txt  CMakeLists.txt  README.md  static_bin.cc  static_sandbox.cc  static_sandbox_test.sh
